<resources>
    <string name="app_name" translatable="false">Complete Word Finder</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Complete Word Finder</string>
    <string name="nav_header_subtitle">words &amp; anagrams</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_rate_app">Rate App</string>
    <string name="action_help">Help</string>
    <string name="action_filter">Filter</string>
    <string name="fragment_anagram_textinput_hint">Insert Word</string>
    <string name="fragment_anagram_find_button_text">FIND</string>
    <string name="nav_item_anagrams">Anagrams</string>
    <string name="nav_item_begins_with">Starts With</string>
    <string name="nav_item_words_contained">Word Search</string>
    <string name="nav_item_sub_anagrams">Sub Anagrams</string>
    <string name="nav_item_wildcards">Wildcards</string>
    <string name="text_description_anagrams">Find words from the given word\'s anagrams</string>
    <string name="text_description_begins_with">Find words that start with given letters</string>
    <string name="text_description_words_contained">Find words contained in a given sequence of letters</string>
    <string name="text_description_sub_anagrams">Find words from a combination of letters</string>
    <string name="text_description_wildcards">Find words using the wildcard \"?\"</string>
    <string name="text_help_anagrams">Insert a word or a set of letters to find all its anagrams.\nThe max number of letters depends on the longest word present in the dictionary.</string>
    <string name="text_help_begins_with">Find all the words that start with the given set of letters.\nThe max number of letters depends on the longest word present in the dictionary.</string>
    <string name="text_help_words_contained">Given a sequence of letters, finds all the existing words from left to right, like in a word search puzzle game.\nThe max number of letters depends on the longest word present in the dictionary.</string>
    <string name="text_help_sub_anagrams">Given a combination of letters, finds all the possible existing anagrams with same or lesser length. Due to computational reasons, the max number of letters is set to 15.</string>
    <string name="text_help_wildcards">The wildcard \"?\" is a character that can be replaced by any letter. Use the wildcard to find all the words that match the positions of the given letters.\nThe max number of letters depends on the longest word present in the dictionary and the max number of wildcards is 15 due to computational reasons. There must be at least one letter inserted.</string>
    <string name="text_help_example_anagrams">Given the word \"CAT\" you get the anagram ACT</string>
    <string name="text_help_example_begins_with">Given the letters \"FLO\" you get the words like FLOP, FLOW, FLOOD, FLOOR and so on…</string>
    <string name="text_help_example_words_contained">Given the letters \"VERTICALL\" you get the words like VERTICAL, CALL and ALL</string>
    <string name="text_help_example_sub_anagrams">Given the letters \"AERD\" you get the words like DARE, DEAR, READ, RAD, RED, EAR, ERA and so on…</string>
    <string name="text_help_example_wildcards">Given the letters \"S??CE\" you get the words like SLICE, SPACE, SINCE and so on…</string>
    <string name="text_no_words_found">No Words Found</string>
    <string name="sharedpref_current_dictionary" translatable="false">current_dictionary</string>
    <string name="sharedpref_default_dictionary" translatable="false">english_dictionary</string>
    <string name="sharedpref_current_dictionary_title">Dictionary</string>
    <string name="sharedpref_current_dictionary_max_word_length" translatable="false">max_word_length</string>
    <string name="sharedpref_word_order" translatable="false">word_order</string>
    <string name="sharedpref_word_order_default" translatable="false">descending</string>
    <string name="sharedpref_word_order_title">Word Order</string>
    <string name="sharedpref_theme" translatable="false">theme_pref</string>
    <string name="sharedpref_theme_title">Theme</string>
    <string name="sharedpref_theme_default" translatable="false">default</string>
    <string name="sharedpref_trie_version" translatable="false">trie_version</string>
    <!--<string name="english_dictionary">words_english.txt</string>-->
    <!--<string name="italian_dictionary">280000_parole_italiane.txt</string>-->
    <string name="wildcards_fragment_toast_too_many_wildcards">Too many wildcards. Max is 15</string>
    <string name="wildcards_fragment_toast_only_wildcards">Insert at least one letter</string>
    <string name="toast_max_digits_exceeded">Max digits exceeded</string>
    <string name="toast_error_retrieving_dictionary">Error retrieving dictionary</string>
    <string name="help_dialog_button_ok">OK</string>
    <string name="help_dialog_example_title">Example</string>
    <string name="toast_copied_to_clipboard">Word copied to clipboard</string>
    <string name="rate_app_title">Rate Complete Word Finder</string>
    <string name="rate_app_message">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_app_yes_button">Rate now</string>
    <string name="rate_app_no_button">No, thanks</string>
    <string name="rate_app_cancel_button">Later</string>
    <string name="filter_dialog_title">Filter</string>
    <string name="filter_dialog_message">Enter the letters that can be replaced by wildcards. For example, given the expression S??CE and the filter made of the letters ILN you get the words like SINCE and SLICE but not the word SPACE. </string>
    <string name="filter_dialog_textinput_hint">Allowed Letters</string>
    <string name="filter_dialog_button_apply">APPLY</string>
    <string name="wildcards_fragment_no_filter">No Filter</string>
    <string name="wildcards_fragment_yes_filter">Filter:</string>
    <string name="array_dictionariesAlias_english">English</string>
    <string name="array_dictionariesAlias_italian">Italian</string>
    <string name="array_dictionariesAlias_french">French</string>
    <string name="array_dictionariesAlias_swedish">Swedish</string>
    <string name="array_wordOrdersAlias_ascending">Ascending</string>
    <string name="array_wordOrdersAlias_descending">Descending</string>
    <string name="array_themeListAlias_light">Light</string>
    <string name="array_themeListAlias_dark">Dark</string>
    <string name="array_themeListAlias_default">Set by Battery Saver</string>
    <string name="array_themeListAlias_default_v28">System default</string>
</resources>
