<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_anagrams"
            android:title="@string/nav_item_anagrams" />
        <item
            android:id="@+id/nav_begins_with"
            android:title="@string/nav_item_begins_with" />
        <item
            android:id="@+id/nav_words_contained"
            android:title="@string/nav_item_words_contained" />
        <item
            android:id="@+id/nav_sub_anagrams"
            android:title="@string/nav_item_sub_anagrams" />

        <item
            android:id="@+id/nav_wildcards"
            android:title="@string/nav_item_wildcards"
            />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item> -->

</menu>
